[PR] Fixed minor dark mode issue

--- a/classiq/src/styles/globals.css
+++ b/classiq/src/styles/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 
-@media screen and (prefers-color-scheme: dark) {
-  .html {
-    background-color: #1a202c;
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: #18181b;
   }
 }
 
